<resources>
    <string name="app_name">Tips calculator</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="okay_15">Okay (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="calculate">CALCULATE</string>
    <string name="tip_amount">Tip: %s</string>
    <string name="invalid_value">Invalid value</string>
    <string name="tip">Total tip</string>
    <string name="title">PRO TIP CALCULATOR 3000</string>
</resources>